<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>psm_orin</name>
  <version>1.0.0</version>
  <description>Power Sense Module for reading current and voltage values as measured by the ads sensor</description>
  <maintainer email="nathanif@stud.ntnu.no">vortex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
